--- a/index.html
+++ b/index.html
@@ -4,102 +4,119 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nino - Modern Portfolio Template</title>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script> -->
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"> -->
     <link rel="stylesheet" href="assets/styles/styles.css">
+    <link rel="stylesheet" href="assets/bootstrap 5/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/bootstrap 5/bootstrap-icons.min.css">
+    <script src="assets/bootstrap 5/bootstrap.bundle.min.js"></script>
   </head>
   <body>
     <header>
-      <nav>
-        <div class="navbrand">Nino</div>
-        <ul>
-          <li><a href="#">Home</a> </li>
-          <li><a href="#about-me">About</a></li>
-          <li><a href="#services">Services</a></li>
-          <li class="dropdown"><a href="#recent-work">Projects &darr;</a>
-            <ul>
-              <li><a href="#stories">Project List</a></li>
-              <li><a href="#">Single Portfolio</a></li>
+      <nav  class="navbar navbar-expand-sm p-3 bg-light">
+        <div class="container-fluid">
+          <span class="navbar-text h1 text-dark">Nino</span>
+          <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
+            <ul class="navbar-nav h2">
+              <li class="nav-item"><a class="nav-link" href="#">Home</a> </li>
+              <li class="nav-item"><a class="nav-link" href="#about-me">About</a></li>
+              <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
+              <li class="dropdown">
+                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#recent-work">Projects</a>
+                <ul class="dropdown-menu"  data-bs-toggle="">
+                  <li class="dropdown-item"><a href="#stories">Project List</a></li>
+                  <li class="dropdown-item"><a href="#">Single Portfolio</a></li>
+                </ul>
+              </li>
+              <li class="nav-item"><a class="nav-link" href="#testimonials">Blog</a></li>
+              <li class="nav-item"><a class="nav-link" href="#contact-me">Contact</a></li>
             </ul>
-          </li>
-          <li><a href="#testimonials">Blog</a></li>
-          <li><a href="#contact-me">Contact</a></li>
-        </ul>
+          </div>
+        </div>
       </nav>
     </header>
     <main>
       <section id="home">
-        <div>
-          <span>Nino Walker</span>
-        </div>
-        <div class="intro">
-          <div class="reviews">
-            <ul>
-              <li><img src="assets/image/author1.jpg" alt="client 1"></li>
-              <li><img src="assets/image/author2.jpg" alt="client 2"></li>
-              <li><img src="assets/image/author3.jpg" alt="client 3"></li>
-            </ul>
-            <div class="num-reviews">
-              100+ reviews
-              <span>(4.96 of 5)</span>
-              <p>Five-star reviews from my esteemed clients</p>
+        <div class="container">
+          <div class="text-center home-heading p-3">
+            <span>Nino Walker</span>
+          </div>
+          <div class="d-flex align-items-center flex-wrap">
+            <div class="reviews">
+              <ul class="d-flex justify-content-center list-unstyled">
+                <li><img class="rounded-circle" src="assets/image/author1.jpg" alt="client 1"></li>
+                <li><img class="rounded-circle" src="assets/image/author2.jpg" alt="client 2"></li>
+                <li><img class="rounded-circle" src="assets/image/author3.jpg" alt="client 3"></li>
+              </ul>
+              <div class="num-reviews h3">
+                100+ reviews
+                <span class="text-secondary">(4.96 of 5)</span>
+                <p>Five-star reviews from my esteemed clients</p>
+              </div>
             </div>
-          </div>
-          <div class="author-image">
-            <img src="assets/image/me.jpg" alt="image of self">
-          </div>
-          <div class="author-text">
-            <p>Hi, I’m Walker, a passionate UX Designer dedicated to creating user-friendly digital experiences.</p>
-            <button type="submit" class="in-touch">Get in touch</button>
+            <div class="author-image">
+              <img class="rounded img-thumbnail" src="assets/image/me.jpg" alt="image of self">
+            </div>
+            <div class="hi-walker">
+              <p class="h5">Hi, I’m Walker, a passionate UX Designer dedicated to creating user-friendly digital experiences.</p>
+              <button type="submit" class="text-white bg-dark py-3 px-4">Get in touch</button>
+            </div>
           </div>
         </div>
       </section>
       <section id="about-me">
-        <div class="company">
-          <h5>COMPANY I WORKED WITH</h5>
-          <ul>
-            <li>LinkedIn</li>
-            <li>Google</li>
-            <li>Walmart</li>
-            <li>Amazon</li>
-            <li>Slack</li>
-          </ul>
-        </div>
-        <div class="about-details">
-          <h5>About me</h5>
-          <p>I’m Nino Walker, a seasoned UX designer with over 8 years of experience in crafting intuitive and engaging digital experiences. My journey began with a background in graphic design, where I discovered my passion for understanding user behavior and translating it into seamless interactions.</p>
-        </div>
-        <div class="experience">
-          <div>
-            <div class="experience-title">
-              8+
-            </div>
-            <div class="experience-detail">
-              Years of experience
-            </div>
+        <div class="container-fluid pb-5 bg-dark text-white">
+          <div class="company">
+            <h5 class="p3-5 my-5">COMPANY I WORKED WITH</h5>
+            <ul class="list-unstyled d-flex gap-3">
+              <li>LinkedIn</li>
+              <li>Google</li>
+              <li>Walmart</li>
+              <li>Amazon</li>
+              <li>Slack</li>
+            </ul>
           </div>
-          <div>
-            <div class="experience-title">
-              1k+
-            </div>
-            <div class="experience-detail">
-              Complete Projects
-            </div>
+          <div class="d-flex justify-content-center flex-wrap gap-5 about-details">
+            <h4 class="mt-5 w-50">About me</h4>
+            <p class="h5 w-75 px-3 justify-content-center">I’m Nino Walker, a seasoned UX designer with over 8 years of experience in crafting intuitive and engaging digital experiences. My journey began with a background in graphic design, where I discovered my passion for understanding user behavior and translating it into seamless interactions.</p>
           </div>
-          <div>
-            <div class="experience-title">
-              90%+
+          <div class="mt-4 d-flex justify-content-around">
+            <div class="text-center">
+              <div class="h1 experience-title">
+                8+
+              </div>
+              <div class="h6 experience-detail">
+                Years of experience
+              </div>
             </div>
-            <div class="experience-detail">
-              Client Satisfaction
+            <div class="text-center">
+              <div class="h1 experience-title">
+                1k+
+              </div>
+              <div class="h6 experience-detail">
+                Complete Projects
+              </div>
+            </div>
+            <div class="text-center">
+              <div class="h1 experience-title">
+                90%+
+              </div>
+              <div class="h6 experience-detail">
+                Client Satisfaction
+              </div>
             </div>
           </div>
         </div>
       </section>
       <section id="services">
         <div class="container">
-          <h2>SERVICES</h2>
+          <h1 class="pt-5 mt-4">SERVICES</h1>
           <div class="service">
-            <div class="services">
-              <div class="services-header">
+            <div class="services p-5 bg-light m-3 rounded">
+              <div class="services-header d-flex justify-content-between pb-3">
                 <span>01</span>
                 <p>&rarr;</p>
               </div>
@@ -108,8 +125,8 @@
                 <p>Blend of strategic thinking and creative flair to craft a digital identity that resonates and captivates.kits you need to create a true website within minutes.</p>
               </div>
             </div>
-          <div class="services">
-            <div class="services-header">
+          <div class="services p-5 bg-light m-3 rounded">
+            <div class="services-header d-flex justify-content-between pb-3">
               <span>02</span>
               <p>&rarr;</p>
             </div>
@@ -118,8 +135,8 @@
               <p>Blend of artistic intuition with strategic insight to craft a visual identity..</p>
             </div>
           </div>
-          <div class="services">
-            <div class="services-header">
+          <div class="services p-5 bg-light m-3 rounded">
+            <div class="services-header d-flex justify-content-between pb-3">
               <span>03</span>
               <p>&rarr;</p>
             </div>
@@ -128,8 +145,8 @@
               <p>Blend of functionality with aesthetics to create delightful experience..</p>
             </div>
           </div>
-          <div class="services">
-            <div class="services-header">
+          <div class="services p-5 bg-light m-3 rounded">
+            <div class="services-header d-flex justify-content-between pb-3">
               <span>04</span>
               <p>&rarr;</p>
             </div>
@@ -141,42 +158,42 @@
         </div>
         </div>
       </section>
-      <section id="recent-work">
+      <section id="recent-work" class=" bg-dark text-white pb-5">
         <div>
           <div class="workheading">
-            <h2>Some Recent Work</h2>
+            <h2 class="p-5">Some Recent Work</h2>
           </div>
           <div class="works">
-          <div class="work-image">
-            <img src="assets/image/work1.jpg" alt="work 1">
+          <div class="work-image mb-4">
+            <img class="img-fluid" src="assets/image/work1.jpg" alt="work 1">
+          </div>
+          <div class="work-image mb-4">
+            <img class="img-fluid" src="assets/image/work2.jpg" alt="work 2">
+          </div>
+          <div class="work-image mb-4">
+            <img class="img-fluid" src="assets/image/work3.jpg" alt="work 3">
+          </div>
+          <div class="work-image mb-4">
+            <img class="img-fluid" src="assets/image/work4.jpg" alt="work 4">
           </div>
           <div class="work-image">
-            <img src="assets/image/work2.jpg" alt="work 2">
-          </div>
-          <div class="work-image">
-            <img src="assets/image/work3.jpg" alt="work 3">
-          </div>
-          <div class="work-image">
-            <img src="assets/image/work4.jpg" alt="work 4">
-          </div>
-          <div class="work-image">
-            <img src="assets/image/work5.jpg" alt="work 5">
+            <img class="img-fluid" src="assets/image/work5.jpg" alt="work 5">
           </div>
         </div>
         </div>
       </section>
       <section id="testimonials">
-        <div>
+        <div class="container">
           <div class="testimonial-heading"><h2>Testimonials</h2></div>
-          <div class="cards">
-          <div class="card">
-            <img src="assets/image/author1.jpg" alt="withness image" class="card-image">
-            <p class="card-detail">Financial planners help people to knowledge in about how to invest and in save their moneye the most efficient way eve plan ners help people tioniio know ledige in about how.</p>
-            <div class="card-author">
-              <h3>Zonathon Doe</h3>
-              <p>CEO & Founder X</p>
-            </div>
-          </div>
+            <div class="cards">
+              <div class="card">
+                <img src="assets/image/author1.jpg" alt="withness image" class="card-image">
+                <p class="card-detail">Financial planners help people to knowledge in about how to invest and in save their moneye the most efficient way eve plan ners help people tioniio know ledige in about how.</p>
+                <div class="card-author">
+                  <h3>Zonathon Doe</h3>
+                  <p>CEO & Founder X</p>
+                </div>
+              </div>
           <div class="card">
             <img src="assets/image/author2.jpg" alt="withness image" class="card-image">
             <p class="card-detail">Asian planners help people to knowledge in about how to invest and in save their moneye the most efficient way eve plan ners help people tioniio know ledige in about how.</p>
@@ -212,40 +229,42 @@
         </div>
         </div>
       </section>
-      <section id="stories">
-        <div class="container">
+      <section id="stories" class="container-fluid bg-dark text-white pt-5">
+        <div class="">
           <div class="stories-heading">
-            <h2>Stories</h2>
+            <h1 class="p-4">Stories</h1>
           </div>
-          <div class="story-item">
-            <div class="story-image">
-              <img src="assets/image/blog1.jpg" alt="story imgae">
+          <div class=" d-flex">
+            <div class="story-item">
+              <div class="story-image">
+                <img src="assets/image/blog1.jpg" width="450px" alt="story imgae">
+              </div>
+              <div class="story-description">
+                <h4>Posted on Aug 28</h4>
+                <h3>Create a Landing Page that performs Great</h3>
+                <button>Read More</button>
+              </div>
             </div>
-            <div class="story-description">
-              <h4>Posted on Aug 28</h4>
-              <h3>Create a Landing Page that performs Great</h3>
-              <button>Read More</button>
             </div>
-          </div>
-          <div class="story-item">
-            <div class="story-image">
-              <img src="assets/image/blog2.jpg" alt="story imgae">
+            <div class="story-item">
+              <div class="story-image">
+                <img src="assets/image/blog2.jpg" width="450px" alt="story imgae">
+              </div>
+              <div class="story-description">
+                <h4>Posted on Aug 28</h4>
+                <h3>Starting and GGrid grid cols-12 gap-6ing a career in web design</h3>
+                <button>Read More</button>
+              </div>
             </div>
-            <div class="story-description">
-              <h4>Posted on Aug 28</h4>
-              <h3>Starting and GGrid grid cols-12 gap-6ing a career in web design</h3>
-              <button>Read More</button>
-            </div>
-          </div>
-          <div class="story-item">
-            <div class="story-image">
-              <img src="assets/image/blog3.jpg" alt="story imgae">
-            </div>
-            <div class="story-description">
-              <h4>Posted on Aug 28</h4>
-              <h3>How can designers prepare for the future</h3>
-              <button>Read More</button>
-            </div>
+            <div class="story-item d-flex">
+              <div class="story-image">
+                <img src="assets/image/blog3.jpg" width="450px" alt="story imgae">
+              </div>
+              <div class="story-description">
+                <h4>Posted on Aug 28</h4>
+                <h3>How can designers prepare for the future</h3>
+                <button>Read More</button>
+              </div>
           </div>
         </div>
 
@@ -255,23 +274,21 @@
         <div class="contacts">
           <div class="contact">
             <div>
-              <img src="Screenshot 2025-03-08 102919.png" alt="icon">
-              <h4>Our Office:</h4>
+              <h4>Our Office <i class="bi bi-pin"></i></h4>
               <span>Jurain,Dhaka Bangladesh</span>
             </div>
             <div>
-              <img src="Screenshot 2025-03-08 102919.png" alt="icon">
-              <h4>Our Office:</h4>
-              <span>Jurain,Dhaka Bangladesh</span>
+              
+              <h4>Contact Number <i class="bi bi-headphones"></i>:</h4>
+              <span>+23712345678</span>
             </div>
             <div>
-              <img src="Screenshot 2025-03-08 102919.png" alt="icon">
-              <h4>Our Office:</h4>
-              <span>Jurain,Dhaka Bangladesh</span>
+              <h4>Email <i class="bi bi-envelope"></i></h4>
+              <span>123@example.com</span>
             </div>
             <div class="socials">
-              <img src="Screenshot 2025-03-08 102919.png" alt="icon">
-              <h4>Our Office:</h4>
+              
+              <h4>Socials <i class="bi bi-facebook"></i></h4>
               <span>Jurain,Dhaka Bangladesh</span>
             </div>
           </div>
@@ -297,7 +314,7 @@
     </main>
     <footer>
       <div>
-        <span>Have a project in mind?</span>
+        <span class="mind">Have a project in mind?</span>
       </div>
       <div class="letwork">
         <p>Let's Work</p>
